# gum-maths

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  gum-cmake-gen.conf
examples/: CMakeLists.txt  ColorConversion.cpp  Matrices.cpp  Vectors.cpp  equationprinter.h
src/: CMakeLists.txt  Config.cmake.in  gum-maths.h
src/Maths/: ColorFunctions.cpp  ColorFunctions.h  Constants.h  GumMathsClass.cpp  GumMathsClass.h  Maths.cpp  Maths.h  MatrixFunctions.cpp  MatrixFunctions.h  Noise.h  Random.h  bbox.h  color.h  mat.h  quat.cpp  quat.h  vec.h
src/Maths/Noise/: CellularNoise.cpp  FBMNoise.cpp  GradientNoise.cpp  HexagonsNoise.cpp  Noise.cpp  NoiseHashes.cpp  Patterns.cpp  PerlinNoise.cpp  VoronoiNoise.cpp
tests/: CMakeLists.txt  QuaternionConversion.cpp
